cli/tests/snapshots/cli__prediction_modes.snap
---
source: cli/tests/cli.rs
expression: output
---
exit code: 0
--- stdout
low-confidence.bin: unknown [low confidence: wasm, 31%]
--- stderr
exit code: 0
--- stdout
low-confidence.bin: unknown [low confidence: wasm, 31%]
--- stderr
exit code: 0
--- stdout
low-confidence.bin: wasm
--- stderr
