cli/tests/snapshots/cli__prints_an_empty_json_array_without_entries.snap
---
source: cli/tests/cli.rs
expression: "magika(dir.path(), &args, b\"\")"
---
exit code: 0
--- stdout
[]
--- stderr
